# oncothresh-web

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  _version.py  dataset.py  dependencies.py  main.py  schemas.py
backend/app/routers/: evaluation.py
backend/tests/: conftest.py  test_dataset.py  test_endpoints.py
examples/: README.md  sample_predictions.csv
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  vite-env.d.ts
frontend/src/api/: client.ts  types.ts  useEndpoint.ts
frontend/src/components/: AnalysisStep.tsx  BootstrapChart.tsx  BootstrapPanel.tsx  CalibrationChart.tsx  CalibrationPanel.tsx  CompareModelsChart.tsx  CompareModelsPanel.tsx  DataStep.tsx  DecisionCurveChart.tsx  DecisionCurvePanel.tsx  MetricsPanel.tsx  MultiThresholdChart.tsx  MultiThresholdPanel.tsx  NNTPanel.tsx  ProvenanceFooter.tsx  SensitivityChart.tsx  SensitivityPanel.tsx
