[project]
name = "oncothresh-web"
version = "0.1.0"
description = "FastAPI backend for the oncothresh web dashboard: a thin REST layer over the oncothresh library."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Omkar Adhali" }]
dependencies = [
    # The dashboard is a presentation layer. All numerical results come from oncothresh,
    # pinned to an exact version so the science this repo serves is fully reproducible.
    # Widen to a supported range once a compatibility matrix exists (see README).
    "oncothresh==0.1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",  # required by FastAPI for multipart/form-data (CSV upload)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",  # FastAPI TestClient transport
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
